res/camcan/slurm-97646.err
Traceback (most recent call last):
  File "/camcan/FPNflexiblehubs/FPNflexiblehubs/flexiblehubsrunPoolSubjsCC.py", line 2, in <module>
    import PoolSubjs
  File "/camcan/FPNflexiblehubs/FPNflexiblehubs/PoolSubjs.py", line 464
    plt.savefig((os.path.join(self.resultspth,'MatrixGVCReg%d'%(chunklen) + '.png')), dpi=200)
    ^
IndentationError: expected an indented block
